# toy_py_package

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/toy_py_package/: __init__.py  cli.py
test_env/: pyvenv.cfg
tests/: __init__.py  test_toy_py_package.py
