[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toy_py_package"
version = "0.1.0"
description = "IA1"
readme = "README.rst"
authors = [
  {name = "Hui Tang", email = "htang085@uottawa.ca"}
]
maintainers = [
  {name = "Hui Tang", email = "htang085@uottawa.ca"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/htang085/toy_py_package/issues"
changelog = "https://github.com/htang085/toy_py_package/blob/master/changelog.md"
homepage = "https://github.com/htang085/toy_py_package"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

